[gd_scene load_steps=14 format=3 uid="uid://c1iuugkvrsx3c"]

[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_pu2xe"]
[ext_resource type="AudioStream" uid="uid://0y7cm0cgdvmd" path="res://Assets/Sound/Loop.mp3" id="2_ykcqp"]
[ext_resource type="PackedScene" uid="uid://dp1g54uhbgmo1" path="res://Scenes/Ground.tscn" id="3_hyruu"]
[ext_resource type="PackedScene" uid="uid://bp513gokf7dy0" path="res://Scenes/Clouds.tscn" id="4_hvx7h"]
[ext_resource type="PackedScene" uid="uid://bfjnoufm1od2e" path="res://Scenes/Buddy.tscn" id="5_vtk8e"]
[ext_resource type="PackedScene" uid="uid://cqdr7aa3ncuoq" path="res://Scenes/Overlay.tscn" id="6_86cns"]
[ext_resource type="PackedScene" uid="uid://bwaqs6td86x77" path="res://Scenes/DrawingLayer.tscn" id="6_liqrl"]
[ext_resource type="PackedScene" uid="uid://iglrjpwfajgi" path="res://Scenes/BloodSplatter.tscn" id="7_gnpxg"]
[ext_resource type="PackedScene" uid="uid://cjdt40qw3elep" path="res://Scenes/Prefab_Obstacles/dirt_tower.tscn" id="9_jhpxc"]
[ext_resource type="PackedScene" uid="uid://ckl2i16w71ho1" path="res://Scenes/Prefab_Obstacles/buried_rock.tscn" id="10_ug0iu"]

[sub_resource type="Animation" id="Animation_1i2ff"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_0csv0"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iq8ng"]
_data = {
"RESET": SubResource("Animation_1i2ff"),
"fade_in": SubResource("Animation_0csv0")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_pu2xe")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iq8ng")
}

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ykcqp")
volume_db = 4.685

[node name="Ground" parent="." instance=ExtResource("3_hyruu")]
position = Vector2(-1, 632)

[node name="Obstacles" type="Node2D" parent="."]

[node name="Clouds" parent="." instance=ExtResource("4_hvx7h")]
position = Vector2(-8, 32)

[node name="Buddy" parent="." instance=ExtResource("5_vtk8e")]
position = Vector2(10, 400)
scale = Vector2(2, 2)

[node name="BuriedRock" parent="." instance=ExtResource("10_ug0iu")]
position = Vector2(6300, 635)

[node name="DirtTower" parent="." instance=ExtResource("9_jhpxc")]
position = Vector2(4600, 634)

[node name="HUD" parent="." instance=ExtResource("6_86cns")]
offset_left = 3.0
offset_top = 6.0
offset_right = 3.0
offset_bottom = 6.0

[node name="DrawingLayer" parent="." instance=ExtResource("6_liqrl")]

[node name="InstructionBanner" type="Label" parent="."]
offset_left = 967.0
offset_top = 654.0
offset_right = 8331.0
offset_bottom = 697.0
text = "Hi!                      This is your Mushroom Buddy!                       He's not running from anything,                      he just likes to run!             Make sure the way is clear so he can run forever!                               Right click to erase dirt in his path, and to fill up your dirt bar!                                                                                                 Left click to draw dirt to give him a platform or bridge!                                                                                                                                  Great Work!                      Good Luck!                                           0 cm "

[node name="BloodSplatter" parent="." instance=ExtResource("7_gnpxg")]
position = Vector2(-18, 629)

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 964.0
offset_bottom = 695.0
color = Color(0, 0, 0, 1)

[connection signal="_send_new_dirt" from="." to="DrawingLayer" method="_on_game__send_new_dirt"]
[connection signal="change_dirt" from="DrawingLayer" to="HUD" method="_on_drawing_layer_change_dirt"]
